# event-producer-rs

./: Cargo.toml  README.md  arm64.Dockerfile  config.yml
src/: lib.rs  main.rs
src/generator/: mod.rs  random_bytes.rs  types.rs
src/metrics/: mod.rs
src/producer/: kafka.rs  mod.rs  redis.rs  stdout.rs  types.rs
src/settings/: loader.rs  mod.rs  types.rs
