[package]
name = "event-producer"
version = "0.1.0"
edition = "2021"

[features]
kafka               = ["rdkafka"]
full                = ["kafka"]

[dependencies]
config              = { version = "0.11", features = ["yaml"] }
rdkafka             = { version = "0.27.0", features = ["gssapi-vendored"], optional = true }
hyper               = { version = "0.14.16", features = ["runtime", "server"] }
tokio               = { version = "1.16.1", features = ["rt", "rt-multi-thread"] }
envy                = "0.4.2"
log                 = "0.4.14"
pretty_env_logger   = "0.4.0"
lazy_static         = "1.4.0"
prometheus          = "0.13.0"
routerify           = "3"
serde_json          = "1.0.75"
serde               = "1.0.133"
serde_derive        = "1.0.133"
crossbeam-channel   = "0.5.2"
crossbeam-utils     = "0.8.1"
rand                = "0.8.4"
futures             = "0.3.19"
futures-util        = "0.3.19"

[profile.release]
lto = "fat"
codegen-units = 1